fixed spelling error

--- a/iOSLocalization/sv.lproj/Main.strings
+++ b/iOSLocalization/sv.lproj/Main.strings
@@ -11,4 +11,4 @@
 /* Class = "UILabel"; text = "Hello"; ObjectID = "Pu7-xs-tY1"; */
 "Pu7-xs-tY1.text" = "Hej";
 
-"p1I-2s-uX0.text" = "Hej igen";
+"p1I-2s-uX0.text" = "Hej igen på dig";
